# llm-dual-service

./: README.md  docker-compose.yml
auth_service/: .env.example  Dockerfile  main.py
auth_service/api/: router.py  routes_auth.py
auth_service/app/api/: deps.py
auth_service/app/core/: security.py
auth_service/app/db/: models.py
auth_service/app/repositories/: users.py
auth_service/app/schemas/: user.py
auth_service/app/services/: openrouter_client.py
auth_service/auth_service.egg-info/: SOURCES.txt
auth_service/core/: config.py  errors.py
auth_service/schemas/: user.py
auth_service/tests/: conftest.py  test_auth_api.py  test_auth_negative.py  test_security.py
auth_service/usecases/: auth.py
bot_service/: Dockerfile  pyproject.toml  pytest.ini
bot_service/app/: main.py
bot_service/app/bot/: dispatcher.py  handlers.py
bot_service/app/core/: config.py  jwt.py
bot_service/app/infra/: celery_app.py  redis.py
bot_service/app/services/: openrouter_client.py
bot_service/app/tasks/: __init__.py  llm_tasks.py
bot_service/bot_service.egg-info/: SOURCES.txt
bot_service/tests/: conftest.py  test_handlers.py  test_jwt.py  test_openrouter.py
